s3-stored-modules/vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC template for Advanced Networks


Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Network Configuration
      Parameters:
      - VPCCIDR
      - PublicSubnet1CIDR
      - PrivateSubnet1CIDR
    ParameterLabels:
      VPCCIDR:
        default: VPC CIDR
      PublicSubnet1CIDR:
        default: Public subnet 1 CIDR
      PrivateSubnet1CIDR:
        default: Private subnet 1 CIDR


Parameters:
  VPCCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: Must be a valid IP range in x.x.x.x/x notation
    Default: 11.0.0.0/16
    Description: CIDR Block for the VPC
    Type: String
  PublicSubnet1CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: Must be a valid IP range in x.x.x.x/x notation
    Default: 11.0.1.0/24
    Description: CIDR Block for the public DMZ subnet 1 located in Availability Zone 1
    Type: String
  PrivateSubnet1CIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: Must be a valid IP range in x.x.x.x/x notation
    Default: 11.0.10.0/24
    Description: CIDR block for private subnet 1 located in Availability Zone 1
    Type: String


Resources:
#VPC
  AnVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: True
      InstanceTenancy: "default"
      Tags:
        - Key: Name
          Value: "Advanced Networks"

#Subnets#
#public#
  AnPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: True
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      Tags:
        - Key: Name
          Value: AdvancedNetworks-Public-1
      VpcId: !Ref AnVPC

#Private#
  AnPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      Tags:
        - Key: Name
          Value: AdvancedNetworks-Private-1
      VpcId: !Ref AnVPC

#End Of Subnets#

  AnIGW:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: "Advanced Networks"

  AnEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  AnNatGW:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - AnEIP
          - AllocationId
      SubnetId: !Ref AnPublicSubnet1
      Tags:
        - Key: Name
          Value: "Advanced Networks"

  AnVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref AnIGW
      VpcId: !Ref AnVPC

#Route Tables#
#public#
  AnPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref AnVPC
      Tags:
        - Key: Name
          Value: AdvancedNetworks-Public-RTB

  AnPublicDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref AnIGW
      RouteTableId: !Ref AnPublicRouteTable

  PublicRouteSubnetAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref AnPublicRouteTable
      SubnetId: !Ref AnPublicSubnet1

#private#
  AnPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref AnVPC
      Tags:
        - Key: Name
          Value: AdvancedNetworks-Private-RTB

  AnPrivateDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref AnNatGW
      RouteTableId: !Ref AnPrivateRouteTable

  PrivateRouteSubnetAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref AnPrivateRouteTable
      SubnetId: !Ref AnPrivateSubnet1
#End OF Route Tables#

Outputs:
  AnVPCID:
    Description: "VPC Id"
    Value: !Ref AnVPC

  AnPublicSubnet1:
    Description: Public Subnet1
    Value: !Ref AnPublicSubnet1

  AnPrivateSubnet1:
    Description: Private Subnet1
    Value: !Ref AnPrivateSubnet1
